--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,14 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+package-lock.json
+.DS_Store
+coverage
+.env.*
+.vscode
+data
+yarn.lock
+tmp/
+dist/
+idea
